--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
         <div class="first_input"></div>
         <div class="second_input"></div>
       </div>
-      <button class="two_digit top_button delete">AC</button>
+      <button class="top_button delete">AC</button>
       <button class="top_button minus">+/-</button>
+      <button class="top_button number">%</button>
       <button class="operation">÷</button>
       <button class="number">1</button>
       <button class="number">2</button>
